# SCI-Solver_Eikonal

./: .gitignore  Makefile  README.md
example_data/: CubeMesh_size16.ele  CubeMesh_size16.node  sphere_11102verts.ply  sphere_1202verts.ply  sphere_12verts.ply  sphere_14verts.ply  sphere_182verts.ply  sphere_266verts.ply  sphere_4196verts.ply  sphere_42verts.ply  sphere_4902verts.ply  sphere_6458verts.ply
include/: meshFIM.h
levelset/: levelset.cu
metis-4.0.3/Lib/: bucketsort.c  mesh.c  mkwayfmh.c  mrefine.c  sfm.c  stat.c  subdomains.c
nbproject/: Package-Default.bash  configurations.xml  project.xml
nbproject/private/: private.xml
src/: CMakeLists.txt  CTestConfig.cmake  Eikonal.cu  Eikonal.h  meshFIM.cu  tetgen.cu  tetmesh.cu
src/core/: CMakeLists.txt
src/core/cuda/: CUDA_kernels.cu  meshFIM.cu  tetmesh.cu
src/core/include/: CUDADefines.h  meshFIM.h  mycutil.h  tetmesh.h
src/core2d/: CMakeLists.txt
src/core2d/cuda/: CUDA_kernels.cu  KDtree.cc  TriMesh_connectivity.cu  TriMesh_curvature.cc  TriMesh_io.cu  TriMesh_normals.cu  TriMesh_pointareas.cc  TriMesh_stats.cu  TriMesh_tstrips.cu  cutil.cu  filter.cc  meshFIM2d.cu  meshFIM2d_eikonal.cu  remove.cc  reorder_verts.cc
src/core2d/include/: CUDADefines.h  Color.h  Eikonal2D.h  TriMesh.h  TriMesh_algo.h  Vec.h  XForm.h  cutil.h  lineqn.h  meshFIM2d.h  meshFIM2d_eikonal.h
src/core3d/: CMakeLists.txt
src/core3d/cuda/: CUDA_kernels.cu  cutil.cu  meshFIM3d.cu  meshFIM3dEikonal.cu  predicates.cu  tetgen.cu  tetmesh.cu
src/core3d/include/: CUDADefines.h  Eikonal3D.h  Vec.h  cutil.h  meshFIM3d.h  meshFIM3dEikonal.h  mycutil.h  tetgen.h  tetmesh.h
src/examples/: CMakeLists.txt  example1.cu  example2.cu  example3.cu
src/test/: CMakeLists.txt
src/test/2d/: 2D-basic.cc  2D-converge.cc  2D-improve.cc  2D-sanity.cc  CMakeLists.txt
src/test/3d/: 3D-basic.cc  3D-converge.cc  3D-improve.cc  3D-sanity.cc  3D-small.cc  CMakeLists.txt
src/test/cli/: CMakeLists.txt
src/test/test_data/: SquareMesh_size16.ply  SquareMesh_size32.ply  cube_scalars.txt  sphere13.ele  sphere13.node  sphere19499.ele  sphere19499.node  sphere8.ele  sphere8.node  sphere8092.ele  sphere8092.node  sphere_12verts.ply  sphere_266verts.ply  sphere_290verts.ply  sphere_3530verts.ply  sphere_4610verts.ply  sphere_7418verts.ply  sphere_74verts.ply  square_scalars.txt  torus_matrices.txt
