include_directories(
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/include
	${METIS_PATH}/Lib
)

FILE(GLOB src cuda/*)
FILE(GLOB hdr include/*)

CUDA_ADD_LIBRARY(Eikonal-3D_CORE STATIC ${src} ${hdr})
ADD_DEPENDENCIES(Eikonal-3D_CORE metis)
if (CMAKE_SYSTEM_NAME MATCHES "Linux")
  TARGET_LINK_LIBRARIES(Eikonal-3D_CORE -ldl ${METIS_LIBRARY})
else()
  TARGET_LINK_LIBRARIES(Eikonal-3D_CORE ${METIS_LIBRARY})
endif()
